good/tls-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - www.praekiko.tk
      - praekiko.tk
      secretName: nginx-lets-encrypt-tls
  rules:
  - host: www.praekiko.tk
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
